tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__AllYourCardAreBe-AAAAAAAAAAAAAAAAAAAG1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1749,
  "prerequisites": [
    1745
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Card bases are just as you might think they are; they're the base part that each card you make will use to connect onto the motherboard.\n\nI suggest making a handful of these for future cards.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "All Your Card Are Belong To Us",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1745
  ],
  "rewards": [],
  "tasks": []
}
