tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__ArithmeticLogicC-AAAAAAAAAAAAAAAAAAAG1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1748,
  "prerequisites": [
    1745
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Arithmetic Logic Circuits are used in numerous parts, typically in groups of 8-16, and occasionally up to 64.\n\nSo be sure to make plenty.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Arithmetic Logic Circuits",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1745
  ],
  "rewards": [],
  "tasks": []
}
