tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__ComputerCase-AAAAAAAAAAAAAAAAAAAG2g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1754,
  "prerequisites": [
    1759
  ],
  "properties": {
    "auto_claim": false,
    "desc": "100 Percent Waterproof.\n\nThe Computer Case is the HUB of all your computer parts essentially. It takes two memory sticks, a BIOs rom, a CPU, and a hard drive at the very least to run your computer.\n\nThe power converter allows you to power it from your GregTech power grid, and the floppy drive will allow you to install your operating system onto the hard drive.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Computer Case",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1759
  ],
  "rewards": [],
  "tasks": []
}
